# meeting-memory-system

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  architecture.md  backup.md  benchmarks.md  cli.md  connectors.md  dashboard.md  deployment.md  extraction.md  graph.md  index.md  intelligence.md  performance.md  replay.md  retrieval.md  schema.md  sdk.md  storage.md
docs/case-studies/: README.md  customer-support.md  decision-reversals.md  engineering-organization.md  knowledge-reuse.md  recurring-project-risks.md  startup-operations.md
docs/tutorials/: README.md  docker-deployment.md  generating-insights.md  getting-started.md  import-meetings.md  production-deployment.md  python-sdk.md  rest-api.md  running-automation.md  searching-memory.md  using-the-graph.md
examples/: customer_feedback_call.txt  product_design_review.txt  startup_weekly.txt
examples/api/: README.md  capture_dashboard.py  curl.sh  sdk_http.py  sdk_quickstart.py  serve.py
examples/graph/: README.md
examples/history/: README.md  meeting1.txt  meeting2.txt  meeting3.txt
examples/intelligence/: README.md
examples/ops/: README.md  backup_restore.py  benchmark_charts.py  generate_dataset.py  replay_demo.py  run_benchmarks.py
examples/ops/deployment/: docker-compose.prod.yml
examples/organizations/: README.md
examples/organizations/enterprise/: 2026-01-12_program_review.txt  2026-02-02_architecture_sync.txt  2026-02-23_wave_one_retro.txt
examples/organizations/research-lab/: 2026-01-09_lab_meeting.txt  2026-01-30_methods_review.txt  2026-02-20_results_review.txt
examples/outputs/: customer_feedback_call.json  product_design_review.json  startup_weekly.json
examples/pipelines/: README.md  batch.json  daily.yaml  weekly.yaml
examples/retrieval/: README.md
notebooks/: 01_import.ipynb  02_search.ipynb  03_graph.ipynb  04_intelligence.ipynb  05_sdk.ipynb  06_api.ipynb  07_deployment.ipynb  README.md
scripts/: healthcheck.py  start.sh
src/meeting_memory/: __init__.py  cli.py
tests/: api_helpers.py  connector_helpers.py  intelligence_helpers.py  ops_helpers.py  test_api_endpoints.py  test_benchmark_viz.py  test_benchmarks.py  test_cli.py  test_cli_connectors.py  test_cli_demo.py  test_cli_extract.py  test_cli_graph.py  test_cli_intelligence.py  test_cli_ops.py  test_cli_retrieval.py  test_cli_storage.py  test_confidence.py  test_connectors_automation.py  test_connectors_config.py  test_connectors_edge.py  test_connectors_export.py  test_connectors_import.py  test_connectors_logging.py  test_connectors_models.py  test_connectors_registry.py  test_connectors_scheduler.py  test_dashboard.py  test_dedup.py  test_deployment.py  test_example_organizations.py  test_extraction_models.py  test_extraction_pipeline.py  test_extraction_validation.py  test_extractors.py  test_graph_engine.py  test_graph_extraction.py  test_graph_lineage.py  test_graph_models.py  test_graph_storage.py  test_integration.py  (+26 more)
(+131 files in other folders)
