[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-memory"
version = "0.8.0"
description = "Deterministic meeting-intelligence platform: parse, extract, store, retrieve, graph, analyse, and import/export meeting memory, exposed through a shared service layer, a FastAPI REST API, a Python SDK, and a web dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya" }]
keywords = ["meetings", "transcripts", "parsing", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
sdk = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.scripts]
meeting-memory = "meeting_memory.cli:main"

[project.urls]
Homepage = "https://github.com/Aditya/meeting-memory-system"
Repository = "https://github.com/Aditya/meeting-memory-system"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["meeting_memory"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["meeting_memory"]
mypy_path = "src"
